src/objects/X3_0_Bushenyi_K132_Beans__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_K132_beans_at_retail_price__c</fullName>
        <label>A Kg of K132 beans at retail price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_K132_beans_at_wholesale_price__c</fullName>
        <label>A Kg of K132 beans at wholesale price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_trader_in_K132_beans__c</fullName>
        <label>Name of trader in K132 beans</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Bushenyi__c</fullName>
        <label>3.0 Market Bushenyi</label>
        <referenceTo>Market_Bushenyi__c</referenceTo>
        <relationshipLabel>3.0 Bushenyi K132 Beans</relationshipLabel>
        <relationshipName>X3_0_Bushenyi_K132_Beans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Bushenyi K132 Beans</label>
    <nameField>
        <displayFormat>BK-{0000}</displayFormat>
        <label>3.0 Bushenyi K132 Beans	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Bushenyi K132 Beans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>